# computer_graphics

./: Bayes  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Renderer/: ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
Resourses/: ResourseManager.cpp  ResourseManager.h
res/shaders/: vertex.txt
